# https---github.com-fpddmw-eco-concil-runtime

./: .gitignore  README.md  _workflow_support.py  openclaw-agent-responsibility-report.md  openclaw-agent-unblocking-assessment.md  openclaw-blueprint-ideal-council-workflow.md  openclaw-collaboration-status.md  openclaw-data-layer-report.md  openclaw-db-first-agent-runtime-blueprint.md  openclaw-db-first-dashboard.md  openclaw-db-first-master-plan.md  openclaw-db-first-progress-log.md  openclaw-dual-flow-skill-assessment.md  openclaw-first-refactor-blueprint.md  openclaw-full-development-report.md  openclaw-legacy-runtime-final-audit.md  openclaw-legacy-runtime-retirement-sprint.md  openclaw-production-development-plan.md  openclaw-runtime-mode-development-flow.md  openclaw-runtime-sequence-walkthrough.md  openclaw-runtime-source-queue-rebuild.md  openclaw-skill-phase-plan.md  openclaw-skills-catalog.md  openclaw-teacher-progress-report.md  pyproject.toml
eco-concil-runtime/: README.md  pyproject.toml
eco-concil-runtime/docs/orchestrate/: orchestration-flow.md
eco-concil-runtime/scripts/: eco_milestone_package.py  eco_progress_dashboard.py  eco_runtime_kernel.py
eco-concil-runtime/src/eco_council_runtime/: __init__.py  analysis_objects.py  (+42 more)
eco-concil-runtime/src/eco_council_runtime.egg-info/: PKG-INFO
eco-concil-runtime/tests/: test_contract_runtime.py  test_investigation.py  test_investigation_benchmarks.py  test_investigation_state.py  test_normalize_library.py  test_orchestration_execution.py  test_orchestration_planning.py  test_reporting_artifacts.py
(+914 files in other folders)
