[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-council-runtime"
version = "0.1.0"
description = "Standalone runtime for eco-council control-plane, normalization, matching, and reporting workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "fpddmw" }
]
dependencies = []

[project.scripts]
eco-council-contract = "eco_council_runtime.contract:main"
eco-council-normalize = "eco_council_runtime.normalize:main"
eco-council-orchestrate = "eco_council_runtime.orchestrate:main"
eco-council-reporting = "eco_council_runtime.reporting:main"
eco-council-supervisor = "eco_council_runtime.supervisor:main"
eco-council-case-library = "eco_council_runtime.case_library:main"
eco-council-signal-corpus = "eco_council_runtime.signal_corpus:main"
eco-council-eval = "eco_council_runtime.eval:main"
eco-council-simulate = "eco_council_runtime.simulate:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eco_council_runtime = []
